# substreams-antelope

./: Cargo.toml  README.md  build.rs  gen.sh  rust-toolchain.toml
.github/workflows/: push.yml  test.yml
abigen/: Cargo.toml  README.md
abigen-tests/: Cargo.toml  README.md
abigen-tests/abi/: bounties.json  bounties.rs.golden  eosio.json  eosio.rs.golden  grants.rs.golden  token.rs.golden  token_wrapped.json  token_wrapped.rs.golden
abigen-tests/src/: main.rs
abigen-tests/tests/: abigen_test.rs
abigen/src/: abi.rs  action.rs  assert.rs  contract.rs  decoder.rs  field.rs  lib.rs  rust.rs  ty.rs  type_alias.rs
core/: Cargo.toml
core/src/: action.rs  block.rs  errors.rs  lib.rs
core/src/pb/: sf.antelope.type.v1.rs
src/: action.rs  block.rs  decoder.rs  errors.rs  lib.rs  symbol_code.rs  types.rs
src/abigen/: abi.rs  action.rs  assert.rs  build.rs  contract.rs  field.rs  mod.rs  rust.rs  ty.rs  typ.rs
src/pb/: google.protobuf.rs  sf.antelope.r#type.v1.rs  sf.antelope.type.v1.rs
substreams-antelope/: Cargo.toml
substreams-antelope/src/: lib.rs
tests/: test_generate.rs
tests/abi/: grants.json  grants.json.rs  token.json  token.json.rs
