[package]
name = "substreams-antelope"
version = "0.1.0"
authors = ["Fred <fred@pinax.network>", "Denis <denis@pinax.network>", "Yaro <yaro@pinax.network>"]
description = "Substreams for Antelope"
homepage = "https://github.com/pinax-network/substreams-antelope"
repository = "https://github.com/pinax-network/substreams-antelope"
readme = "README.md"
keywords = [ "substreams", "antelope", "streamingfast", "firehose", "thegraph"]
categories = ["api-bindings", "external-ffi-bindings", "wasm"]
license = "MIT OR Apache-2.0"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
prost = "0.11"
prost-types = "0.11"
