[package]
name = "substreams-antelope"
version = "0.2.0"
authors = ["Fred <fred@pinax.network>", "Denis <denis@pinax.network>", "Yaro <yaro@pinax.network>"]
description = "Substreams for Antelope"
homepage = "https://github.com/pinax-network/substreams-antelope"
repository = "https://github.com/pinax-network/substreams-antelope"
readme = "README.md"
keywords = [ "substreams", "antelope", "streamingfast", "firehose", "thegraph"]
categories = ["api-bindings", "external-ffi-bindings", "wasm"]
license = "MIT OR Apache-2.0"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
prost = "0.11"
prost-types = "0.11"
substreams = "^0.5.0"
serde_json = "1.0.91"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1"
heck = "0.4"
syn = { version = "1.0.95", default-features = false, features = ["derive", "parsing", "printing", "proc-macro"] }
quote = "1.0.2"
proc-macro2 = "1.0.7"
prettyplease = "0.1"

[dev-dependencies]
pretty_assertions = "1.2.1"
