[workspace]
resolver = "2"
members = ["core", "substreams-antelope", "abigen", "abigen-tests"]

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"

[workspace.package]
version = "0.6.0"
edition = "2021"
description = "Substreams development kit for Antelope chains, contains Firehose Block model and helpers."
authors = [
    "Fred <fred@pinax.network>",
    "Denis <denis@pinax.network>",
    "Yaro <yaro@pinax.network>",
]
homepage = "https://github.com/pinax-network/substreams-antelope"
repository = "https://github.com/pinax-network/substreams-antelope"
readme = "README.md"
keywords = ["substreams", "antelope", "pinax", "firehose", "thegraph"]
categories = ["api-bindings", "external-ffi-bindings", "wasm"]
license = "MIT OR Apache-2.0"
rust-version = "1.76"

[workspace.dependencies]
substreams-antelope = { version = "0.6.*", path = "./substreams-antelope" }
substreams-antelope-core = { version = "0.6.*", path = "./core" }
substreams-antelope-abigen = { version = "0.6.*", path = "./abigen" }
