[package]
name = "substreams-antelope-abigen-tests"
version.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
substreams-antelope-abigen = { workspace = true }

[dev-dependencies]
pretty_assertions = "1"