[package]
name = "substreams-antelope-abigen"
version.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
readme = "../README.md"

[dependencies]
anyhow = "1"
heck = "0.4"
syn = { version = "2.0", default-features = false, features = ["derive", "parsing", "printing", "proc-macro"] }
quote = "1.0.2"
proc-macro2 = "1.0.7"
prettyplease = "0.2"
serde_json = "1.0.91"
serde = { version = "1.0", features = ["derive"] }
substreams-antelope-core = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.2.1"
substreams = "^0.6.0"
