[package]
name = "substreams-antelope-core"
version.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
readme = "../README.md"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
prost = "0.13"
prost-types = "0.13"
substreams = "^0.6.0"

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
anyhow = "1"
pretty_assertions = "1.2.1"
