[package]
name = "substreams-antelope"
version.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
readme = "../README.md"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
substreams = "^0.5.0"
substreams-antelope-core = { version = "0.*", path = "../core" }
substreams-antelope-abigen = { version = "0.*", path = "../abigen" }

[dev-dependencies]
anyhow = "1"